--- a/Lab1/client.html
+++ b/Lab1/client.html
@@ -11,59 +11,65 @@
                 <div class="flexColumn" id="loginSignup">
                     <div id="loginWindow" class="flexColumn flexAround">
                         <h2>Login</h2>
-                        <div class="form">
-                            <label>Email</label>
-                            <input type="email">
-                        </div>
-                        <div class="form">
-                            <label>Password</label>
-                            <input type="password">
-                        </div>
-                        <div class="flexEnd">
-                            <button>Login</button>
-                        </div>
+                        <form>
+                            <div class="inputAndLabel">
+                                <label>Email</label>
+                                <input type="email" required>
+                            </div>
+                            <div class="inputAndLabel">
+                                <label>Password</label>
+                                <input type="password" id="passwordLogin" oninput="return validatePasswordLength(this)" required>
+                            </div>
+                            <div class="flexEnd">
+                                <input type="submit" value="Login"></input>
+                            </div>
+                        </form>
                     </div>
                     <div id="signupWindow" class="flexColumn flexAround">
                         <h2>Signup</h2>
-                        <div class="form">
-                            <label>First name</label>
-                            <input type="text">
-                        </div>
-                        <div class="form">
-                            <label>Last name</label>
-                            <input type="text">
-                        </div>
-                        <div class="form">
-                            <label>Gender</label>
-                            <select>
-                                <option value="Female">Female</option>
-                                <option value="Male">Male</option>
-                                <option value="Other">Other</option>
-                            </select>
-                        </div>
-                        <div class="form">
-                            <label>City</label>
-                            <input type="text">
-                        </div>
-                        <div class="form">
-                            <label>Country</label>
-                            <input type="text">
-                        </div>
-                        <div class="form">
-                            <label>Email</label>
-                            <input type="email">
-                        </div>
-                        <div class="form">
-                            <label>Password</label>
-                            <input type="password">
-                        </div>
-                        <div class="form">
-                            <label>Repeat PS</label>
-                            <input type="password">
-                        </div>
-                        <div class="flexEnd">
-                            <button>Signup</button>
-                        </div>
+                        <form onsubmit="submitSignup()">
+                            <div class="inputAndLabel">
+                                <label>First name</label>
+                                <input type="text" id="firstName" required>
+                            </div>
+                            <div class="inputAndLabel">
+                                <label>Last name</label>
+                                <input type="text" id="lastName" required>
+                            </div>
+                            <div class="inputAndLabel">
+                                <label>Gender</label>
+                                <select id="gender">
+                                    <option value="Female">Female</option>
+                                    <option value="Male">Male</option>
+                                    <option value="Other">Other</option>
+                                </select>
+                            </div>
+                            <div class="inputAndLabel">
+                                <label>City</label>
+                                <input type="text" id="city" required>
+                            </div>
+                            <div class="inputAndLabel">
+                                <label>Country</label>
+                                <input type="text" id="country" required>
+                            </div>
+                            <div class="inputAndLabel">
+                                <label>Email</label>
+                                <input type="email" id="email" required>
+                            </div>
+                            <div class="inputAndLabel">
+                                <label>Password</label>
+                                <input type="password" id="passwordSignup" oninput="return validatePasswordLength(this)" required>
+                            </div>
+                            <div class="inputAndLabel">
+                                <label>Repeat PS</label>
+                                <input type="password" id="repeatPS" oninput="validateRepeatPassword()" required>
+                            </div>
+                            <div class="flexEnd">
+                                <input type="submit" value="Signup"></input>
+                            </div>
+                        </form>
+
+                        
                     </div>
                 </div>
             </div>
