--- a/Lab1/client.html
+++ b/Lab1/client.html
@@ -4,24 +4,25 @@
         <script src="client.js" type="text/javascript"></script>
         <script src="serverstub.js" type="text/javascript"></script>
         <script type=”text/view” id="welcomeView">
-            <div class="flexRow" id="mainWindow">
+            <div class="flexRow" class="mainWindow">
                 <div id="logoSloganWindow">
                     <img src="/wimage.png" alt="slogan and logo">
                 </div>
                 <div class="flexColumn" id="loginSignup">
                     <div id="loginWindow" class="flexColumn flexAround">
                         <h2>Login</h2>
-                        <form>
+                        <form onsubmit="submitLogin()">
                             <div class="inputAndLabel">
                                 <label>Email</label>
-                                <input type="email" required>
+                                <input type="email" id="loginEmail" required>
                             </div>
                             <div class="inputAndLabel">
                                 <label>Password</label>
-                                <input type="password" id="passwordLogin" oninput="return validatePasswordLength(this)" required>
+                                <input type="password" id="loginPassword" oninput="return validatePasswordLength(this)" required>
                             </div>
                             <div class="flexEnd">
                                 <input type="submit" value="Login"></input>
+                                <p id="loginError"></p>
                             </div>
                         </form>
                     </div>
@@ -66,6 +67,7 @@
                             </div>
                             <div class="flexEnd">
                                 <input type="submit" value="Signup"></input>
+                                <p id="signupError"></p>
                             </div>
                         </form>
 
@@ -75,10 +77,36 @@
             </div>
         </script>
         <script type=”text/view” id="profileView">
-            <p>lmao</p>
+            <div class="mainWindow">
+                <div>
+            </div>
         </script>
     </head>
     <body>
-        <div id="view"></div>
+        <!-- <div id="view"></div> -->
+        <div class="mainWindow flexColumn">
+            <div id="tabs" class="flexRow">
+                <button class="tab active" id="homeTab" onclick="switchTab('home')">
+                    <h2>Home</h2>
+                </button>
+                <button class="tab" id="browseTab" onclick="switchTab('browse')">
+                    <h2>Browse</h2>
+                </button>
+                <button class="tab" id="accountTab" onclick="switchTab('account')">
+                    <h2>Account</h2>
+                </button>
+            </div>
+            <div id="panels">
+                <div class="panel active" id="homePanel">
+                    <p>home</p>
+                </div>
+                <div class="panel" id="browsePanel">
+                    <p>browse</p>
+                </div>
+                <div class="panel" id="accountPanel">
+                    <p>account</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
